--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     <div class="container">
         <div class="header"><h2>به سایت من خوش اومدی !</h2></div>
         <div class="content"><h3>هنوزم اون سینای قدیمی زندست</h3><p>خیلی فکر کردم چی بنویسم اینجا که به ذهنم رسید سه تا از بهترین آلبوم هایی که تا حالا شنیدم رو لیست کنم و بذارم اینجا با لینک هاشون که بگوشید و صفا کنید .</p></div>
-        <div class="menu"><a href="#">آلبوم زندون دل فریدون فروغی</a><p>**********</p><a href="#">آلبوم اوکی کامپیوتر از ردیوهد</a><p>***********</p><a href="#">آلبوم پارانوید از بلک سبث</a></div>
+        <div class="menu"><a href="https://ememay.ir/music/zendoone-del/">آلبوم زندون دل فریدون فروغی</a><p>**********</p><a href="https://ememay.ir/music/airbag-2/">آلبوم اوکی کامپیوتر از ردیوهد</a><p>***********</p><a href="https://open.spotify.com/album/6r7LZXAVueS5DqdrvXJJK7">آلبوم پارانوید از بلک سبث</a></div>
         <div class="footer"><h4>پیش به سوی بی نهایت و فراتر از آن !</h4></div>
     </div>
     <footer>
         <p class="ue">این سایت متعلق به من (سینا معتمدی نژاد) می باشد</p>
     </footer>
 </body>
+
 </html>
